# duta

./: .dir-locals.el  .gitignore  README.md  duta.cabal  stack.yaml
app/: Main.hs
docker/: build.Dockerfile  deploy.Dockerfile  docker-compose.yaml  docker-compose.yml
duta-emacs/: duta-thread-mode.el  duta-threads-mode.el  duta.el
duta-model/: duta-model.cabal
duta-model/src/Duta/: Model.hs  RFC2047.hs
duta-model/src/Duta/Types/: Model.hs  Order.hs
duta-smtp-receiver/: 558.txt  README.md  duta-smtp-receiver.cabal
duta-smtp-receiver/app/: Main.hs  SMTPReceiver.hs
duta-smtp-receiver/bench/: Main.hs
duta-smtp-receiver/data/: server.crt  server.key
duta-smtp-receiver/src/Data/Conduit/Network/: Timeout.hs
duta-smtp-receiver/src/Duta/SMTP/: RFC2047.hs  Receiver.hs
duta-smtp-receiver/src/Duta/SMTP/Receiver/: MIME.hs
duta-smtp-receiver/test/: Spec.hs
duta-types/: duta-types.cabal
duta-types/src/Duta/Types/: EmailAddress.hs  Label.hs  Letter.hs  MIME.hs  Mailbox.hs  Model.hs
duta-web/: README.md  duta-web.cabal
duta-web/app/: Development.hs  Main.hs
duta-web/src/Duta/: Web.hs
duta-web/src/Duta/Web/: Controllers.hs  Foundation.hs  Types.hs  Views.hs
duta-web/static/css/: duta.css
spf/: spf.cabal
spf/app/: Main.hs
spf/cbits/: spf-helper.c
spf/src/: Spf.hs
src/: Duta.hs
src/Duta/: MIME.hs  Receiver.hs
test/: Spec.hs
