name:                duta
version:             0.0.0
homepage:            https://github.com/chrisdone/duta#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
copyright:           2018 Chris Done
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Duta
  build-depends:       base >= 4.7 && < 5,
                       conduit,
                       conduit-extra,
                       network-conduit-tls,
                       bytestring,
                       attoparsec,
                       exceptions,
                       monad-logger,
                       stringsearch,
                       transformers,
                       mtl,
                       unliftio-core,
                       text
  default-language:    Haskell2010

executable duta
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , duta
                     , monad-logger
  default-language:    Haskell2010

test-suite duta-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , duta
                     , HaskellNet
                     , HaskellNet-SSL
                     , hspec
                     , async
                     , monad-logger
                     , unliftio-core
                     , conduit
                     , bytestring
                     , conduit-extra
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/chrisdone/duta
