name:                duta-model
version:             0.0.0
homepage:            https://github.com/chrisdone/duta#readme
license:             BSD3
author:              Chris Done
maintainer:          chrisdone@gmail.com
copyright:           2018 Chris Done
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:
    Duta.Types.Model
    Duta.Types.Order
    Duta.Model
  build-depends:
    base >= 4.7 && < 5,
    duta-types,
    mime,
    persistent,
    time-compat,
    persistent-template,
    persistent-sqlite,
    monad-logger,
    exceptions,
    mtl,
    old-time,
    text,
    bytestring,
    time,
    email-validate,
    attoparsec
  default-language:    Haskell2010
