name:                duta-smtp-receiver
version:             0.0.0
homepage:            https://github.com/chrisdone/duta#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
copyright:           2018 Chris Done
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:
    Duta.SMTP.Receiver
  other-modules:
    Data.Conduit.Network.Timeout
  build-depends:       base >= 4.7 && < 5,
                       conduit,
                       conduit-extra,
                       streaming-commons,
                       network-conduit-tls,
                       bytestring,
                       attoparsec,
                       exceptions,
                       monad-logger,
                       stringsearch,
                       transformers,
                       mtl,
                       unliftio-core,
                       parsec,
                       text,
                       duta-types,
                       duta-model,
                       time,
                       old-time,
                       persistent,
                       persistent-sqlite,
                       resource-pool,
                       mime
  default-language:    Haskell2010

executable duta-smtp-receiver
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , duta-smtp-receiver
                     , monad-logger
                     , optparse-simple
                     , time
                     , persistent-sqlite
                     , duta-model
                     , resource-pool
                     , mtl
  default-language:    Haskell2010

test-suite duta-smtp-receiver-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , duta-smtp-receiver
                     , duta-types
                     , HaskellNet
                     , HaskellNet-SSL
                     , hspec
                     , QuickCheck
                     , async
                     , monad-logger
                     , unliftio-core
                     , parsec
                     , conduit
                     , mime
                     , bytestring
                     , conduit-extra
                     , old-time
                     , time
                     , persistent-sqlite
                     , email-validate
                     , mtl
                     , text
                     , duta-model
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/chrisdone/duta
