name:                duta-types
version:             0.0.0
homepage:            https://github.com/chrisdone/duta#readme
license:             BSD3
author:              Chris Done
maintainer:          chrisdone@gmail.com
copyright:           2018 Chris Done
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:
    Duta.Types.Mailbox
    Duta.Types.EmailAddress
  build-depends:
    base >= 4.7 && < 5,
    persistent,
    persistent-template,
    text,
    parsec,
    bytestring,
    time,
    email-validate,
    attoparsec
  default-language:    Haskell2010
