name:                duta-web
version:             0.0.0
homepage:            https://github.com/chrisdone/duta#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
copyright:           2018 Chris Done
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable duta-web
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules: Development
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , duta-smtp-receiver
                     , monad-logger
                     , optparse-simple
                     , time
                     , persistent-postgresql
                     , duta-model
                     , resource-pool
                     , mtl
                     , lucid
                     , yesod
                     , conduit
                     , text
                     , bytestring
                     , yesod-lucid
                     , yesod-auth
                     , yesod-static
                     , yesod-core
                     , containers
                     , html-conduit
                     , xml-conduit
                     , syb
  default-language:    Haskell2010
