name:                duta-web
version:             0.0.0
homepage:            https://github.com/chrisdone/duta#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
copyright:           2018 Chris Done
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Development
    Duta.Web
    Duta.Web.Types
    Duta.Web.Views
    Duta.Web.Controllers
    Duta.Web.Foundation
  other-modules: Text.Links
  ghc-options:         -Wall
  build-depends:       base
                     , duta-smtp-receiver
                     , monad-logger
                     , time
                     , persistent-postgresql
                     , duta-model
                     , resource-pool
                     , mtl
                     , lucid
                     , yesod
                     , conduit
                     , text
                     , bytestring
                     , yesod-lucid
                     , persistent
                     , network-uri
                     , HUnit
                     , yesod-auth
                     , yesod-static
                     , yesod-core
                     , containers
                     , html-conduit
                     , xml-conduit
                     , syb
                     , esqueleto
                     , duta-types
  default-language:    Haskell2010

executable duta-web
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , duta-smtp-receiver
                     , monad-logger
                     , optparse-simple
                     , text
                     , duta-web
                     , duta-model
                     , duta-types
                     , mtl
                     , resource-pool
                     , yesod
                     , persistent-postgresql
  default-language:    Haskell2010
