name:                spf
version:             0.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Spf
  build-depends:       base >= 4.7 && < 5, bytestring
  default-language:    Haskell2010
  extra-libraries:     spf2
  c-sources:           cbits/spf-helper.c
  include-dirs:        cbits

executable spf
  hs-source-dirs:      app
  ghc-options:         -Wall -threaded
  build-depends:       base >= 4.7 && < 5, spf
  default-language:    Haskell2010
  main-is: Main.hs
